AB#186199: Added missing border-radius, corrected image size, corrected colors on recipe card

--- a/docroot/themes/custom/emulsifymars/components/01-atoms/links/defaultLink/_defaultLink.scss
+++ b/docroot/themes/custom/emulsifymars/components/01-atoms/links/defaultLink/_defaultLink.scss
@@ -1,6 +1,6 @@
 .default-link {
   color: clr(text-inverse);
-  background-color: clr(subcolor-1);
+  background-color: clr(secondary);
   font-family: variable(primary-font);
   text-transform: uppercase;
   font-size: 1.6rem;
@@ -36,7 +36,7 @@
   }
 
   &:hover {
-    color: clr(primary);
+    color: clr(secondary);
 
     &::after {
       height: 300px;
